# smart-collect

./: .env exampe  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml
app/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
app/migrations/: 0001_initial.py
django_project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
